Fix text input box rendering on mobile

--- a/static/calculator/style.css
+++ b/static/calculator/style.css
@@ -1,5 +1,6 @@
 input {
     margin: 10px;
+    border-radius: 3px;
 }
 
 .calculator {
